--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Encrypted Bookmarks</title>
+    <title>Vaultify - Encrypted Bookmarks</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#f8fafc" media="(prefers-color-scheme: light)" />
@@ -32,6 +32,69 @@
       .tag-input-suggestion {
         @apply px-2 py-1 bg-slate-600 text-slate-200 rounded-md text-xs cursor-pointer hover:bg-slate-500 mr-1 mb-1;
       }
+
+      /* Styles for Visual UI Theme */
+      .theme-visual .bookmark-card-visual {
+        @apply bg-white dark:bg-slate-800 rounded-xl shadow-xl overflow-hidden transition-all duration-300 hover:shadow-sky-500/30 dark:hover:shadow-sky-400/30 flex flex-col;
+        /* border: 1px solid transparent; */
+      }
+      .theme-visual .bookmark-card-visual:hover {
+        /* @apply ring-2 ring-sky-500 dark:ring-sky-600; */
+      }
+      .theme-visual .bookmark-card-visual .visual-thumbnail-area {
+        @apply w-full h-48 overflow-hidden relative;
+      }
+      .theme-visual .bookmark-card-visual .visual-thumbnail-area img {
+        @apply w-full h-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-105;
+      }
+      .theme-visual .bookmark-card-visual .visual-favicon-overlay {
+        @apply absolute top-3 right-3 bg-white/80 dark:bg-slate-900/80 p-1 rounded-md shadow-md;
+      }
+       .theme-visual .bookmark-card-visual .visual-favicon-overlay img {
+        @apply w-6 h-6 object-contain rounded-sm;
+      }
+      .theme-visual .bookmark-card-visual .visual-content-area {
+        @apply p-5 flex flex-col flex-grow;
+      }
+      .theme-visual .bookmark-card-visual .visual-title {
+        @apply text-xl font-bold text-sky-600 dark:text-sky-400 mb-1.5 line-clamp-2 hover:text-sky-500 dark:hover:text-sky-300;
+      }
+      .theme-visual .bookmark-card-visual .visual-url {
+        @apply text-xs text-slate-400 dark:text-slate-500 mb-2 truncate hover:underline;
+      }
+      .theme-visual .bookmark-card-visual .visual-description {
+        @apply text-sm text-slate-600 dark:text-slate-300 mb-3 line-clamp-3 flex-grow min-h-[40px];
+      }
+      .theme-visual .bookmark-card-visual .visual-tags .tag {
+        @apply inline-block bg-slate-200 dark:bg-slate-700 text-slate-600 dark:text-slate-300 text-xs font-medium mr-1.5 mb-1.5 px-2.5 py-1 rounded-full;
+      }
+       .theme-visual .bookmark-card-visual .visual-ai-categories {
+        @apply text-xs mt-2 mb-2;
+      }
+      .theme-visual .bookmark-card-visual .visual-ai-categories .ai-category-label {
+        @apply font-semibold text-slate-500 dark:text-slate-400;
+      }
+      .theme-visual .bookmark-card-visual .visual-ai-categories .ai-category-value {
+        @apply text-slate-700 dark:text-slate-300;
+      }
+      .theme-visual .bookmark-card-visual .visual-footer {
+        @apply mt-auto pt-3 border-t border-slate-200 dark:border-slate-700 flex justify-between items-center;
+      }
+      .theme-visual .bookmark-card-visual .visual-actions button {
+        @apply p-2 text-slate-500 dark:text-slate-400 hover:text-sky-600 dark:hover:text-sky-400 transition-colors rounded-full hover:bg-slate-100 dark:hover:bg-slate-700;
+      }
+      .theme-visual .dashboard-grid {
+         @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-6; /* Fewer columns for visual */
+      }
+
+      /* Ensure current theme uses a specific class for its card if needed, or default to original */
+      .theme-current .bookmark-card-current {
+        /* Default card styles are applied by BookmarkCard.tsx directly for current theme */
+      }
+       .theme-current .dashboard-grid {
+        @apply grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-4 sm:gap-6; /* Original grid */
+      }
+
     </style>
   <script type="importmap">
 {
